# birne-design-system

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.components.json  tsconfig.json
.github/workflows/: sync-tokens.yml
.storybook/: main.ts  preview.ts  storybook.css
components/src/: index.ts
components/src/lib/: supabase.ts
components/src/patterns/: Footer.tsx  Header.tsx  PriceTable.tsx  TeamCard.tsx  index.ts
components/src/primitives/: Accordion.stories.tsx  Accordion.tsx  AiBadge.stories.tsx  AiBadge.tsx  AiGlow.stories.tsx  AiGlow.tsx  AiIcon.stories.tsx  AiIcon.tsx  Alert.stories.tsx  Alert.tsx  Avatar.stories.tsx  Avatar.tsx  Badge.stories.tsx  Badge.tsx  Breadcrumb.stories.tsx  Breadcrumb.tsx  Button.stories.tsx  Button.tsx  Card.stories.tsx  Card.tsx  Carousel.stories.tsx  Carousel.tsx  Checkbox.stories.tsx  Checkbox.tsx  Colors.stories.tsx  Container.stories.tsx  Container.tsx  ContentStack.tsx  CourseBadge.stories.tsx  CourseBadge.tsx  Divider.stories.tsx  Divider.tsx  Drawer.stories.tsx  Drawer.tsx  Dropdown.stories.tsx  Dropdown.tsx  EmptyState.stories.tsx  EmptyState.tsx  IconCircle.tsx  Icons.stories.tsx  (+40 more)
dash-theme/: README.md  pyproject.toml
dash-theme/birne_theme/: __init__.py  colors.py  components.py
html-snippets/components/: badge.html  button.html  card.html  typography.html
html-snippets/templates/pdf-ponuka/: base.html
scripts/: build-tokens.js
tokens/src/: ai.ts  borders.ts  colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
