[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birne-dash-theme"
version = "1.0.0"
description = "Birne Design System theme for Python Dash applications"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Birne Studio s.r.o.", email = "hrusovsky@birne.sk"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dash = ["dash>=2.0.0", "dash-bootstrap-components>=1.0.0"]

[tool.setuptools.packages.find]
include = ["birne_theme*"]
